# www

./: .gitattributes  .gitignore  CMakeLists.txt  build.sh  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
patches/: vite-plugin-comlink@5.0.1.patch
src/: app.css  app.html
src/lib/: .gitignore  index.ts  queue.ts  repos.ts  stores.ts  tokenizers.ts  types.ts  wasm.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/api/hf/[...repo]/tokenizer/: +server.ts
src/routes/cron/: +page.svelte
src/worker/: .gitignore  index.ts
www/: Cargo.toml
www/src/: lib.rs
