[package]
name = "www"
version = "0.1.0"
edition = "2021"
authors = ["Shukant Pal"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_derive = "1.0.203"
serde-wasm-bindgen = "0.6.5"
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
wasm-bindgen = "0.2.92"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
